[fix] Spacing around inputs
Incl:
+ add slight margin around rows with inputs
+ enclose input row in span to recognize whitespace

--- a/public/pgstyle.css
+++ b/public/pgstyle.css
@@ -81,6 +81,7 @@ h2
   flex-wrap: nowrap;
   justify-content: space-between;
   width: 100%;
+  margin: 5px;
 }
 
 .inputrow :first-child
